{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 402,
  "lineage": "0596e172-57a9-a71b-b5f0-909ba6838ed2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nginx_vip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce3d88267394c99e",
            "arn": "arn:aws:ec2:eu-north-1:903050880181:elastic-ip/eipalloc-0ce3d88267394c99e",
            "domain": "vpc",
            "id": "eipalloc-0ce3d88267394c99e",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-63-32-130.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.63.32.130",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "eipalloc-0ce3d88267394c99e",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "infra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "backend",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0930f12db303154e9",
            "arn": "arn:aws:ec2:eu-north-1:903050880181:instance/i-00b5ad452fecdb5b9",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-role-20260627184405823300000002",
            "id": "i-00b5ad452fecdb5b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kofta-eu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02804ebfb28b660ba"
              }
            ],
            "primary_network_interface_id": "eni-02804ebfb28b660ba",
            "private_dns": "ip-10-0-1-49.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.49",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04fed46db19ff66e5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092d3e5290cfe20e5",
            "tags": {
              "Name": "backend",
              "Role": "backend"
            },
            "tags_all": {
              "Name": "backend",
              "Role": "backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0caa8b5bac5e1e78e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "i-00b5ad452fecdb5b9",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ec2_iam_role.aws_iam_instance_profile.this",
            "module.ec2_iam_role.aws_iam_role.this",
            "module.ec2_iam_role.data.aws_caller_identity.current",
            "module.ec2_iam_role.data.aws_iam_policy_document.this",
            "module.ec2_iam_role.data.aws_partition.current",
            "module.internal_sg.aws_security_group.this",
            "module.main_vpc.aws_subnet.private",
            "module.main_vpc.aws_subnet.public",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.monitoring_sg.aws_security_group.this",
            "module.nginx_sg.aws_security_group.this"
          ]
        },
        {
          "index_key": "monitoring",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0930f12db303154e9",
            "arn": "arn:aws:ec2:eu-north-1:903050880181:instance/i-0d9efd5da09e92379",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-role-20260627184405823300000002",
            "id": "i-0d9efd5da09e92379",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kofta-eu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02f628ba86e951fef"
              }
            ],
            "primary_network_interface_id": "eni-02f628ba86e951fef",
            "private_dns": "ip-10-0-101-54.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.54",
            "public_dns": "ec2-13-49-65-130.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.49.65.130",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f9030832eb193b70",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6b068c05b678e94",
            "tags": {
              "Name": "monitoring",
              "Role": "monitoring"
            },
            "tags_all": {
              "Name": "monitoring",
              "Role": "monitoring"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-030a528934e4f387e",
              "sg-0caa8b5bac5e1e78e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "i-0d9efd5da09e92379",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ec2_iam_role.aws_iam_instance_profile.this",
            "module.ec2_iam_role.aws_iam_role.this",
            "module.ec2_iam_role.data.aws_caller_identity.current",
            "module.ec2_iam_role.data.aws_iam_policy_document.this",
            "module.ec2_iam_role.data.aws_partition.current",
            "module.internal_sg.aws_security_group.this",
            "module.main_vpc.aws_subnet.private",
            "module.main_vpc.aws_subnet.public",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.monitoring_sg.aws_security_group.this",
            "module.nginx_sg.aws_security_group.this"
          ]
        },
        {
          "index_key": "nginx1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0930f12db303154e9",
            "arn": "arn:aws:ec2:eu-north-1:903050880181:instance/i-01bc04f5375fcb868",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-role-20260627184405823300000002",
            "id": "i-01bc04f5375fcb868",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kofta-eu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ae2ccd38bfb93df0"
              }
            ],
            "primary_network_interface_id": "eni-0ae2ccd38bfb93df0",
            "private_dns": "ip-10-0-101-231.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.231",
            "public_dns": "ec2-56-228-17-221.eu-north-1.compute.amazonaws.com",
            "public_ip": "56.228.17.221",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f4b9add5120e40cb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6b068c05b678e94",
            "tags": {
              "Name": "nginx1",
              "Role": "nginx",
              "VrrpPriority": "101",
              "VrrpRole": "MASTER"
            },
            "tags_all": {
              "Name": "nginx1",
              "Role": "nginx",
              "VrrpPriority": "101",
              "VrrpRole": "MASTER"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0caa8b5bac5e1e78e",
              "sg-0e2de996af0624625"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "i-01bc04f5375fcb868",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ec2_iam_role.aws_iam_instance_profile.this",
            "module.ec2_iam_role.aws_iam_role.this",
            "module.ec2_iam_role.data.aws_caller_identity.current",
            "module.ec2_iam_role.data.aws_iam_policy_document.this",
            "module.ec2_iam_role.data.aws_partition.current",
            "module.internal_sg.aws_security_group.this",
            "module.main_vpc.aws_subnet.private",
            "module.main_vpc.aws_subnet.public",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.monitoring_sg.aws_security_group.this",
            "module.nginx_sg.aws_security_group.this"
          ]
        },
        {
          "index_key": "nginx2",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0930f12db303154e9",
            "arn": "arn:aws:ec2:eu-north-1:903050880181:instance/i-0f830ef2705caf935",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-role-20260627184405823300000002",
            "id": "i-0f830ef2705caf935",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kofta-eu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0152568ee65945137"
              }
            ],
            "primary_network_interface_id": "eni-0152568ee65945137",
            "private_dns": "ip-10-0-101-216.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.216",
            "public_dns": "ec2-13-60-242-174.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.242.174",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0095107d132298846",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6b068c05b678e94",
            "tags": {
              "Name": "nginx2",
              "Role": "nginx",
              "VrrpPriority": "100",
              "VrrpRole": "BACKUP"
            },
            "tags_all": {
              "Name": "nginx2",
              "Role": "nginx",
              "VrrpPriority": "100",
              "VrrpRole": "BACKUP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0caa8b5bac5e1e78e",
              "sg-0e2de996af0624625"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "i-0f830ef2705caf935",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ec2_iam_role.aws_iam_instance_profile.this",
            "module.ec2_iam_role.aws_iam_role.this",
            "module.ec2_iam_role.data.aws_caller_identity.current",
            "module.ec2_iam_role.data.aws_iam_policy_document.this",
            "module.ec2_iam_role.data.aws_partition.current",
            "module.internal_sg.aws_security_group.this",
            "module.main_vpc.aws_subnet.private",
            "module.main_vpc.aws_subnet.public",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.monitoring_sg.aws_security_group.this",
            "module.nginx_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.internal_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:security-group/sg-0caa8b5bac5e1e78e",
            "description": "Security Group for internal communication",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "All protocols to self",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0caa8b5bac5e1e78e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "All protocols from self",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "internal-sg-20260627184407902600000007",
            "name_prefix": "internal-sg-",
            "owner_id": "903050880181",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-038dd7e6b6b2f405d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "sg-0caa8b5bac5e1e78e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.internal_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all-to-self",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:security-group-rule/sgr-0fc780920329cc06a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "All protocols to self",
            "from_port": null,
            "id": "sgr-0fc780920329cc06a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0caa8b5bac5e1e78e",
            "region": "eu-north-1",
            "security_group_id": "sg-0caa8b5bac5e1e78e",
            "security_group_rule_id": "sgr-0fc780920329cc06a",
            "tags": {
              "Name": "all-to-self"
            },
            "tags_all": {
              "Name": "all-to-self"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "sgr-0fc780920329cc06a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.internal_sg.aws_security_group.this",
            "module.main_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.internal_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all-from-self",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:security-group-rule/sgr-04ad2468e225612a0",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "All protocols from self",
            "from_port": null,
            "id": "sgr-04ad2468e225612a0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0caa8b5bac5e1e78e",
            "region": "eu-north-1",
            "security_group_id": "sg-0caa8b5bac5e1e78e",
            "security_group_rule_id": "sgr-04ad2468e225612a0",
            "tags": {
              "Name": "all-from-self"
            },
            "tags_all": {
              "Name": "all-from-self"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "sgr-04ad2468e225612a0",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.internal_sg.aws_security_group.this",
            "module.main_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:security-group-rule/sgr-0338d383c256d887b",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0338d383c256d887b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0caa8b5bac5e1e78e",
            "security_group_rule_id": "sgr-0338d383c256d887b",
            "tags": {
              "Name": "ssh"
            },
            "tags_all": {
              "Name": "ssh"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "sgr-0338d383c256d887b",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.internal_sg.aws_security_group.this",
            "module.main_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:network-acl/acl-0ffd05ffbca08044a",
            "default_network_acl_id": "acl-0ffd05ffbca08044a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ffd05ffbca08044a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "903050880181",
            "region": "eu-north-1",
            "subnet_ids": [
              "subnet-092d3e5290cfe20e5",
              "subnet-0d6b068c05b678e94"
            ],
            "tags": {
              "Name": "main_vpc-default"
            },
            "tags_all": {
              "Name": "main_vpc-default"
            },
            "vpc_id": "vpc-038dd7e6b6b2f405d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.main_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:route-table/rtb-06cbb581af2822d36",
            "default_route_table_id": "rtb-06cbb581af2822d36",
            "id": "rtb-06cbb581af2822d36",
            "owner_id": "903050880181",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [],
            "tags": {
              "Name": "main_vpc-default"
            },
            "tags_all": {
              "Name": "main_vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-038dd7e6b6b2f405d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.main_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:security-group/sg-054cd80225f5829df",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-054cd80225f5829df",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "903050880181",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main_vpc-default"
            },
            "tags_all": {
              "Name": "main_vpc-default"
            },
            "vpc_id": "vpc-038dd7e6b6b2f405d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.main_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9e916137a56f661",
            "arn": "arn:aws:ec2:eu-north-1:903050880181:elastic-ip/eipalloc-0c9e916137a56f661",
            "association_id": "eipassoc-02e7159324296cae5",
            "domain": "vpc",
            "id": "eipalloc-0c9e916137a56f661",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0214ed6bcb040c24c",
            "private_dns": "ip-10-0-101-18.eu-north-1.compute.internal",
            "private_ip": "10.0.101.18",
            "public_dns": "ec2-16-16-177-5.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.177.5",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Name": "main_vpc-eu-north-1a"
            },
            "tags_all": {
              "Name": "main_vpc-eu-north-1a"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "eipalloc-0c9e916137a56f661",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_internet_gateway.this",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:internet-gateway/igw-0209d76ffeb391813",
            "id": "igw-0209d76ffeb391813",
            "owner_id": "903050880181",
            "region": "eu-north-1",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            },
            "vpc_id": "vpc-038dd7e6b6b2f405d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "igw-0209d76ffeb391813",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9e916137a56f661",
            "association_id": "eipassoc-02e7159324296cae5",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-002e9a8d70705c598",
            "network_interface_id": "eni-0214ed6bcb040c24c",
            "private_ip": "10.0.101.18",
            "public_ip": "16.16.177.5",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d6b068c05b678e94",
            "tags": {
              "Name": "main_vpc-eu-north-1a"
            },
            "tags_all": {
              "Name": "main_vpc-eu-north-1a"
            },
            "vpc_id": "vpc-038dd7e6b6b2f405d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "nat-002e9a8d70705c598",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_eip.nat",
            "module.main_vpc.aws_internet_gateway.this",
            "module.main_vpc.aws_subnet.public",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-056e80489d99206f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-002e9a8d70705c598",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-north-1",
            "route_table_id": "rtb-056e80489d99206f9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-north-1",
            "route_table_id": "rtb-056e80489d99206f9"
          },
          "dependencies": [
            "module.main_vpc.aws_eip.nat",
            "module.main_vpc.aws_internet_gateway.this",
            "module.main_vpc.aws_nat_gateway.this",
            "module.main_vpc.aws_route_table.private",
            "module.main_vpc.aws_subnet.public",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0209d76ffeb391813",
            "id": "r-rtb-065a7676f51a96d8f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-north-1",
            "route_table_id": "rtb-065a7676f51a96d8f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-north-1",
            "route_table_id": "rtb-065a7676f51a96d8f"
          },
          "dependencies": [
            "module.main_vpc.aws_internet_gateway.this",
            "module.main_vpc.aws_route_table.public",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:route-table/rtb-056e80489d99206f9",
            "id": "rtb-056e80489d99206f9",
            "owner_id": "903050880181",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-002e9a8d70705c598",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_vpc-private"
            },
            "tags_all": {
              "Name": "main_vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-038dd7e6b6b2f405d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "rtb-056e80489d99206f9",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:route-table/rtb-065a7676f51a96d8f",
            "id": "rtb-065a7676f51a96d8f",
            "owner_id": "903050880181",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0209d76ffeb391813",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_vpc-public"
            },
            "tags_all": {
              "Name": "main_vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-038dd7e6b6b2f405d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "rtb-065a7676f51a96d8f",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063e5027922c90a2d",
            "region": "eu-north-1",
            "route_table_id": "rtb-056e80489d99206f9",
            "subnet_id": "subnet-092d3e5290cfe20e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "rtbassoc-063e5027922c90a2d",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_route_table.private",
            "module.main_vpc.aws_subnet.private",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064fd25159e3f5505",
            "region": "eu-north-1",
            "route_table_id": "rtb-065a7676f51a96d8f",
            "subnet_id": "subnet-0d6b068c05b678e94"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "rtbassoc-064fd25159e3f5505",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_route_table.public",
            "module.main_vpc.aws_subnet.public",
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:subnet/subnet-092d3e5290cfe20e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092d3e5290cfe20e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "903050880181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "main_vpc-private-eu-north-1a"
            },
            "tags_all": {
              "Name": "main_vpc-private-eu-north-1a"
            },
            "vpc_id": "vpc-038dd7e6b6b2f405d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "subnet-092d3e5290cfe20e5",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:subnet/subnet-0d6b068c05b678e94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6b068c05b678e94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "903050880181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "main_vpc-public-eu-north-1a"
            },
            "tags_all": {
              "Name": "main_vpc-public-eu-north-1a"
            },
            "vpc_id": "vpc-038dd7e6b6b2f405d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "subnet-0d6b068c05b678e94",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.main_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:vpc/vpc-038dd7e6b6b2f405d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ffd05ffbca08044a",
            "default_route_table_id": "rtb-06cbb581af2822d36",
            "default_security_group_id": "sg-054cd80225f5829df",
            "dhcp_options_id": "dopt-00d04d28790fc1a33",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-038dd7e6b6b2f405d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06cbb581af2822d36",
            "owner_id": "903050880181",
            "region": "eu-north-1",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "vpc-038dd7e6b6b2f405d",
            "region": "eu-north-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.monitoring_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:security-group/sg-030a528934e4f387e",
            "description": "Security Group for monitoring access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030a528934e4f387e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "monitoring-sg-20260627184407216900000006",
            "name_prefix": "monitoring-sg-",
            "owner_id": "903050880181",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-038dd7e6b6b2f405d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "sg-030a528934e4f387e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.monitoring_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:security-group-rule/sgr-00b9615e9885e5257",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00b9615e9885e5257",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-030a528934e4f387e",
            "security_group_rule_id": "sgr-00b9615e9885e5257",
            "tags": {
              "Name": "all"
            },
            "tags_all": {
              "Name": "all"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "sgr-00b9615e9885e5257",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.monitoring_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "grafana",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:security-group-rule/sgr-0382671cb6ac31b4a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0382671cb6ac31b4a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-030a528934e4f387e",
            "security_group_rule_id": "sgr-0382671cb6ac31b4a",
            "tags": {
              "Name": "grafana"
            },
            "tags_all": {
              "Name": "grafana"
            },
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "sgr-0382671cb6ac31b4a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.monitoring_sg.aws_security_group.this"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:security-group-rule/sgr-02acf12783937e995",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02acf12783937e995",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-030a528934e4f387e",
            "security_group_rule_id": "sgr-02acf12783937e995",
            "tags": {
              "Name": "ssh"
            },
            "tags_all": {
              "Name": "ssh"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "sgr-02acf12783937e995",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.monitoring_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:security-group/sg-0e2de996af0624625",
            "description": "Security Group for Nginx reverse proxies",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2de996af0624625",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-sg-20260627184408133200000008",
            "name_prefix": "nginx-sg-",
            "owner_id": "903050880181",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-038dd7e6b6b2f405d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "sg-0e2de996af0624625",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:security-group-rule/sgr-0aad97830d1feefa3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0aad97830d1feefa3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0e2de996af0624625",
            "security_group_rule_id": "sgr-0aad97830d1feefa3",
            "tags": {
              "Name": "all"
            },
            "tags_all": {
              "Name": "all"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "sgr-0aad97830d1feefa3",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.nginx_sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:security-group-rule/sgr-0f26936443e01b92a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0f26936443e01b92a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0e2de996af0624625",
            "security_group_rule_id": "sgr-0f26936443e01b92a",
            "tags": {
              "Name": "http"
            },
            "tags_all": {
              "Name": "http"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "sgr-0f26936443e01b92a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.nginx_sg.aws_security_group.this"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:903050880181:security-group-rule/sgr-0a180728ca3f235b3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0a180728ca3f235b3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0e2de996af0624625",
            "security_group_rule_id": "sgr-0a180728ca3f235b3",
            "tags": {
              "Name": "https"
            },
            "tags_all": {
              "Name": "https"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "903050880181",
            "id": "sgr-0a180728ca3f235b3",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.this",
            "module.nginx_sg.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}